[package]
name = "image_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
imageproc = "0.23.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colorgrad = "0.6"
[[bin]]
name = "image_orchestrator"
path = "src/image_orchestrator.rs"